<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>group.gnometrading</groupId>
    <artifactId>gnome-networking</artifactId>
    <version>1.0.14-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jni.libraryName>NativeSockets</jni.libraryName>
        <jni.codePath>${project.basedir}/src/main/native</jni.codePath>
    </properties>

    <repositories>
        <repository>
            <id>github</id>
            <name>Internal Projects</name>
            <url>https://maven.pkg.github.com/gnome-trading-group/*</url>
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:git@github.com:gnome-trading-group/gnome-networking.git</connection>
        <developerConnection>scm:git:git@github.com:gnome-trading-group/gnome-networking.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub GTG Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/gnome-trading-group/gnome-networking</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>group.gnometrading</groupId>
            <artifactId>gnome-core</artifactId>
            <version>1.0.11</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <os.classifier>linux</os.classifier>
            </properties>
        </profile>

        <profile>
            <id>macos</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <os.classifier>macos</os.classifier>
            </properties>
        </profile>

        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <os.classifier>windows</os.classifier>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>Arbitrary</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>${os.classifier}</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                        <arg>-h</arg>
                        <arg>${jni.codePath}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>make</id>
                        <phase>compile</phase>
                        <goals><goal>run</goal></goals>
                        <configuration>
                            <target>
                                <exec executable="cmake" dir="${jni.codePath}" failonerror="true">
                                    <arg line=". -DNATIVE_LIBRARY_NAME=${jni.libraryName}" />
                                </exec>
                                <exec executable="make" dir="${jni.codePath}" failonerror="true">
                                    <arg line="VERBOSE=1" />
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>